[gd_scene load_steps=4 format=3 uid="uid://ck5f72rt3q5km"]

[ext_resource type="Script" path="res://src/match-simulator/match_simulator.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bdft8v1qtxr0v" path="res://src/match-simulator/action-util/action_util.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dklgg30x7f0gd" path="res://src/match-simulator/statistics/statistics.tscn" id="3_ulgd6"]

[node name="MatchSimulator" type="Node"]
script = ExtResource("1")

[node name="ActionUtil" parent="." instance=ExtResource("3")]

[node name="HomeStatistics" parent="." instance=ExtResource("3_ulgd6")]

[node name="AwayStatistics" parent="." instance=ExtResource("3_ulgd6")]

[node name="Timer" type="Timer" parent="."]

[connection signal="action_message" from="ActionUtil" to="." method="_on_ActionUtil_action_message"]
[connection signal="shot" from="ActionUtil" to="." method="_on_ActionUtil_shot"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
